--- a/src/components/Hello.astro
+++ b/src/components/Hello.astro
@@ -1,6 +1,11 @@
-<div id="container">
-  <a href="/">Home</a>
-  <a href="/about/">About</a>
-  <a href="/blog/">Blog</a>
-  <h1>My Astro Site</h1>
-</div>
+<html>
+
+<body>
+  <div id="container">
+    <a href="/">Home</a>
+    <a href="/about/">About</a>
+    <a href="/blog/">Blog</a>
+    <h1>My Astro Site</h1>
+  </div>
+</body>
+</html>
