--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,24 +1,8 @@
 ---
-import '../styles/global.css';
-
-import Welcome from "../components/Welcome.astro";
-import Hello from "../components/Hello.astro";
-import Layout from "../layouts/Layout.astro";
-
-const pageTitle = "Home";
-
-const identity = {
-  firstName: "Chris",
-  country: "USA",
-  occupation: "Software Developer",
-  hobbies: ["photography", "birdwatching", "baseball"],
-};
-
-const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs"];
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import BaseLayout from "../layouts/BaseLayout.astro";
+const pageTitle = "Home Page";
 ---
 
-<Layout>
-  <Hello />
-</Layout>
+<BaseLayout pageTitle={ pageTitle}>
+  <h2>My awesome blog subtitle</h2>
+</BaseLayout>
