--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -2,14 +2,19 @@
 const pageTitle = "Blog";
 import "../styles/global.css";
 import BaseLayout from "../layouts/BaseLayout.astro";
-import BlogPost from "../components/BlogPost.astro"
-const allPosts = Object.values(import.meta.glob('./posts/*.md', { eager: true }));
+import BlogPost from "../components/BlogPost.astro";
+import { getCollection } from "astro:content";
+const allPosts = await getCollection("blog");
 ---
 
 <BaseLayout pageTitle={pageTitle}>
   <h1>My Astro Learning Blog</h1>
   <p>This is where I will post about my journey learning Astro.</p>
   <ul>
-    {allPosts.map((post: any) => <BlogPost url={post.url} title={post.frontmatter.title}/> )}
+    {
+      allPosts.map((post: any) => (
+        <BlogPost url={`/posts/${post.id}/`} title={post.data.title} />
+      ))
+    }
   </ul>
 </BaseLayout>
